# rag-mcp-app

./: fastapi_server.py  main.py  ml_faq_faiss_index.faiss  ml_faq_faiss_index_metadata.pkl  pyproject.toml
mcp_server/: rag_server.py  server.py  web_search_server.py
qa_with_faqs/: rag.py
tools/: faq_retrieval_function.py  web_search_function.py
