[project]
name = "rag-with-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "einops>=0.8.1",
    "faiss-cpu>=1.11.0.post1",
    "fastapi>=0.116.1",
    "fastmcp>=2.10.6",
    "google-search-results>=2.4.2",
    "hf-xet>=1.1.5",
    "httpx>=0.28.1",
    "llama-index>=0.12.50",
    "llama-index-embeddings-huggingface>=0.5.5",
    "mcp[cli]>=1.12.0",
    "qdrant-client>=1.15.0",
]
